samples/_failures_safe/1761268217_222470_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c08d45b9.c: In function ‘main’:
./samples/SAFE/__tmp_c08d45b9.c:149:5: error: expected expression at end of input
  149 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_c08d45b9.c:149:5: error: expected declaration or statement at end of input
